--- a/PythonProjects/OmronOfficeSystem/Ui.ui
+++ b/PythonProjects/OmronOfficeSystem/Ui.ui
@@ -111,8 +111,8 @@
           <property name="spacing">
            <number>-1</number>
           </property>
-          <item row="0" column="0">
-           <widget class="QPushButton" name="pushButton">
+          <item row="1" column="0">
+           <widget class="QPushButton" name="pushButton_2">
             <property name="text">
              <string>PushButton</string>
             </property>
@@ -125,15 +125,15 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QPushButton" name="pushButton_2">
+          <item row="1" column="1">
+           <widget class="QPushButton" name="pushButton_4">
             <property name="text">
              <string>PushButton</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
-           <widget class="QPushButton" name="pushButton_4">
+          <item row="0" column="0">
+           <widget class="QPushButton" name="pushButton">
             <property name="text">
              <string>PushButton</string>
             </property>
@@ -269,7 +269,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <resources/>
  <connections/>
