--- a/PythonProjects/OmronOfficeSystem/TaxiUi.ui
+++ b/PythonProjects/OmronOfficeSystem/TaxiUi.ui
@@ -13,17 +13,11 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="1,0,0,0">
+  <layout class="QHBoxLayout" name="horizontalLayout_7">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <property name="leftMargin">
-        <number>12</number>
-       </property>
-       <property name="rightMargin">
-        <number>12</number>
-       </property>
        <item>
         <widget class="QLineEdit" name="nameLineEdit">
          <property name="sizePolicy">
@@ -44,9 +38,16 @@
         </widget>
        </item>
        <item>
+        <widget class="QLineEdit" name="numberEdit">
+         <property name="placeholderText">
+          <string>份数:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="addNameBtn">
          <property name="toolTip">
-          <string/>
+          <string>添加姓名后请点击保存</string>
          </property>
          <property name="text">
           <string>添加姓名</string>
@@ -515,6 +516,9 @@
          </item>
          <item>
           <widget class="QPushButton" name="exportBtn">
+           <property name="toolTip">
+            <string>请先选择文件保存路径</string>
+           </property>
            <property name="text">
             <string>生成并导出表格</string>
            </property>
