--- a/PythonProjects/OmronOfficeSystem/communication/CommunicationUi.ui
+++ b/PythonProjects/OmronOfficeSystem/communication/CommunicationUi.ui
@@ -150,9 +150,6 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0" rowspan="3" colspan="2">
-          <widget class="QListWidget" name="CSList"/>
-         </item>
          <item row="4" column="0">
           <spacer name="horizontalSpacer_6">
            <property name="orientation">
@@ -428,6 +425,15 @@
            <property name="text">
             <string>通信次数：0              </string>
            </property>
+          </widget>
+         </item>
+         <item row="1" column="0" rowspan="3" colspan="2">
+          <widget class="QTreeWidget" name="CSList">
+           <column>
+            <property name="text">
+             <string notr="true">1</string>
+            </property>
+           </column>
           </widget>
          </item>
         </layout>
