--- a/PythonProjects/OmronOfficeSystem/communication/CommunicationUi.ui
+++ b/PythonProjects/OmronOfficeSystem/communication/CommunicationUi.ui
@@ -57,6 +57,9 @@
              <property name="text">
               <string>Client</string>
              </property>
+             <property name="checked">
+              <bool>false</bool>
+             </property>
              <attribute name="buttonGroup">
               <string notr="true">CSGroup</string>
              </attribute>
@@ -72,6 +75,9 @@
              </property>
              <property name="text">
               <string>Server</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
              </property>
              <attribute name="buttonGroup">
               <string notr="true">CSGroup</string>
@@ -428,10 +434,32 @@
           </widget>
          </item>
          <item row="1" column="0" rowspan="3" colspan="2">
-          <widget class="QTreeWidget" name="CSList">
+          <widget class="QTreeWidget" name="CSTree">
+           <property name="columnCount">
+            <number>3</number>
+           </property>
+           <attribute name="headerCascadingSectionResizes">
+            <bool>false</bool>
+           </attribute>
+           <attribute name="headerDefaultSectionSize">
+            <number>90</number>
+           </attribute>
+           <attribute name="headerHighlightSections">
+            <bool>false</bool>
+           </attribute>
            <column>
             <property name="text">
-             <string notr="true">1</string>
+             <string>服务器IP</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>监听端口</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>监听中</string>
             </property>
            </column>
           </widget>
